--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dependencies": {
         "laravel-vue-pagination": "^4.1.3",
         "vue": "^3.4.26",
-        "vue-loader": "^17.4.2"
+        "vue-loader": "^17.4.2",
+        "vue-router": "^4.3.2"
     }
 }
